Iniciado o layout da pagina

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/images"
             ],
             "styles": [
               "src/styles.css"
@@ -91,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "82e5bd70-b820-4d22-bd73-9e50b693d43e"
   }
 }
